[gd_scene load_steps=10 format=3 uid="uid://by8vnspp4d8vi"]

[ext_resource type="Script" path="res://src/turret/Turret.gd" id="1_yj4np"]
[ext_resource type="Texture2D" uid="uid://dhmgwdt7je8hi" path="res://assets/turrets/small_base.png" id="2_73tdw"]
[ext_resource type="Texture2D" uid="uid://ddoraqpy25syy" path="res://assets/turrets/weapons32x32.png" id="3_n0fwn"]
[ext_resource type="Texture2D" uid="uid://bhob7aleg1sin" path="res://icon.svg" id="3_s15au"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hwy61"]
atlas = ExtResource("3_n0fwn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxr8o"]
atlas = ExtResource("3_n0fwn")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sehbr"]
atlas = ExtResource("3_n0fwn")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_u447r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwy61")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxr8o")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sehbr")
}],
"loop": true,
"name": &"new_animation_1",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5plb2"]
radius = 48.0

[node name="Turret" type="Node2D"]
script = ExtResource("1_yj4np")

[node name="rotation_point" type="Node2D" parent="."]
position = Vector2(16, 16)

[node name="Placing_grid" type="ColorRect" parent="rotation_point"]
z_index = 2
offset_left = -48.0
offset_top = -48.0
offset_right = 48.0
offset_bottom = 48.0
mouse_filter = 2
color = Color(1, 0, 0, 0.470588)
metadata/_edit_use_anchors_ = true

[node name="Base" type="Sprite2D" parent="rotation_point"]
texture = ExtResource("2_73tdw")

[node name="gun_rotation" type="Node2D" parent="rotation_point"]
z_index = 1

[node name="attack" type="Sprite2D" parent="rotation_point/gun_rotation"]
visible = false
position = Vector2(-0.5, -15)
scale = Vector2(0.0546875, 0.328125)
texture = ExtResource("3_s15au")

[node name="Gun" type="AnimatedSprite2D" parent="rotation_point/gun_rotation"]
sprite_frames = SubResource("SpriteFrames_u447r")
autoplay = "default"

[node name="attack_collision" type="Area2D" parent="rotation_point"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="rotation_point/attack_collision"]
shape = SubResource("CircleShape2D_5plb2")

[node name="attack_cooldown" type="Timer" parent="."]

[connection signal="body_entered" from="rotation_point/attack_collision" to="." method="_on_attack_collision_body_entered"]
[connection signal="body_exited" from="rotation_point/attack_collision" to="." method="_on_attack_collision_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
